apps/chuck/0_chuck_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chuck-quote-deployment
  labels:
    app: chuck-quote-service
    version: 0.0.2

spec:
  replicas: 1
  
  selector:
    matchLabels:
      app: chuck-quote-service
  
  template:
    metadata:
      labels:
        app: chuck-quote-service
        version: 0.0.2
    
    spec:
      containers:
        - name: chuck-quote-service
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
          image: gamussa/reactive-quote-service:0.0.2
          imagePullPolicy: IfNotPresent
