apps/chuck/1_chuck_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chuck-quote-service
spec:
  selector:
    app: chuck-quote-service
  ports:
  - port: 8080
    name: web
    targetPort: 8080
  type: ClusterIP


# ---------------------- CLUSTER PORT -------------------------------
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#   labels:
#     app.kubernetes.io/name: chuck-quote-service
#     app.kubernetes.io/version: 0.0.2
#   name: chuck-quote-service
# spec:
#   ports:
#     - name: web
#       port: 8080
#       targetPort: 8080
#   selector:
#     app.kubernetes.io/name: chuck-quote-service
#     app.kubernetes.io/version: 0.0.2
#   type: ClusterIP


# ---------------------- NODE PORT -------------------------------
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#   labels:
#     app.kubernetes.io/name: chuck-quote-service
#     app.kubernetes.io/version: 0.0.2
#   name: chuck-quote-service
# spec:
#  ports:
#    - name: node
#      nodePort: 30021
#      port: 30021
#      protocol: TCP
#      targetPort: 8080
#  selector:
#    app.kubernetes.io/name: back2future-quote-service
#    app.kubernetes.io/version: 0.0.2
#  type: NodePort
